--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
 
         <section>
             <h2>Imagen representativa</h2>
-            <img src="https://via.placeholder.com/300" alt="Imagen minimalista">
+            <img src="denji.png" alt="Imagen minimalista">
         </section>
 
         <section>
