Remove emoji from brand name in header

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 <body>
   <header>
     <div class="container nav">
-      <div class="brand">🧵 Hayakawa Ren</div>
+      <div class="brand"> Hayakawa Ren</div>
       <nav class="links" aria-label="Principal">
         <a class="pill" href="#sobre-mi">Sobre mí</a>
         <a class="pill" href="#proyectos">Proyectos</a>
