Enhance repository fetching and display logic
Updated the fetch URL to include sorting by updated date and modified the repository card description.

--- a/index.html
+++ b/index.html
@@ -161,35 +161,35 @@
         console[tag]("Smoke tests:", results);
       }
     })();
-  <script>
+<script>
 async function cargarRepos() {
   const username = "i7protocol"; // tu user
-  const respuesta = await fetch(`https://api.github.com/users/${username}/repos`);
+  const respuesta = await fetch(`https://api.github.com/users/${username}/repos?sort=updated`);
   const data = await respuesta.json();
 
   const contenedor = document.getElementById("repos");
   contenedor.innerHTML = "";
 
   data.forEach(repo => {
-    if (!repo.fork) {
-      contenedor.innerHTML += `
-        <article class="card">
-          <h3>${repo.name}</h3>
-          <p style="color:var(--muted); margin:0">
-            ${repo.description || "Sin descripción, pero con potencial existencial."}
-          </p>
-          <p style="margin:.5rem 0 0">
-            <a href="${repo.html_url}" target="_blank" style="color:var(--brand);font-weight:700">
-              Ver en GitHub →
-            </a>
-          </p>
-        </article>
-      `;
-    }
+    contenedor.innerHTML += `
+      <article class="card">
+        <h3>${repo.name}</h3>
+        <p style="color:var(--muted); margin:0">
+          ${repo.description || "Sin descripción. Se deja a interpretación artística."}
+        </p>
+        <p style="margin:.5rem 0 0">
+          <a href="${repo.html_url}" target="_blank" style="color:var(--brand);font-weight:700">
+            Ver en GitHub →
+          </a>
+        </p>
+      </article>
+    `;
   });
 }
 
 cargarRepos();
+</script>
+
 </script>
 
 </body>
