--- a/index.html
+++ b/index.html
@@ -99,6 +99,7 @@
       <div class="title">
         <h1 id="name" class="skeleton">i7protocol</h1>
         <p id="bio" class="skeleton">Cargando bio...</p>
+        <p class="mini">Hola, estos son mis proyectos.</p>
         <div style="margin-top:8px; display:flex; gap:8px; flex-wrap:wrap">
           <span id="stats" class="pill skeleton">Repos • Seguidores • Siguiendo</span>
         </div>
