Refactor project description and stats layout

--- a/index.html
+++ b/index.html
@@ -99,10 +99,9 @@
       <div class="title">
         <h1 id="name" class="skeleton">i7protocol</h1>
         <p id="bio" class="skeleton">Cargando bio...</p>
-        <p class="mini">Hola, estos son mis proyectos.</p>
-        <div style="margin-top:8px; display:flex; gap:8px; flex-wrap:wrap">
-          <span id="stats" class="pill skeleton">Repos • Seguidores • Siguiendo</span>
-        </div>
+        
+        <div style="margin-top:8px; display:flex; gap:8px; flex-wrap:wrap">$1</div>
+        <p class="mini" style="margin-top: 14px; display:block;">Hola, estos son mis proyectos.</p>
       </div>
       <div class="actions">
         <a id="ghLink" class="link-btn" href="https://github.com/i7protocol" target="_blank" rel="noopener">Visitar GitHub</a>
