--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
         <p id="bio" class="skeleton">Cargando bio...</p>
         
         <div style="margin-top:8px; display:flex; gap:8px; flex-wrap:wrap">$1</div>
-        <p class="mini" style="margin-top: 14px; display:block;">Hola, estos son mis proyectos.</p>
+        
       </div>
       <div class="actions">
         <a id="ghLink" class="link-btn" href="https://github.com/i7protocol" target="_blank" rel="noopener">Visitar GitHub</a>
@@ -121,6 +121,8 @@
       </select>
       <span id="count" class="pill">0 proyectos</span>
     </section>
+
+    <p class="mini" style="margin:32px 0 12px; font-size:18px; font-weight:600;">Hola, estos son mis proyectos.</p>
 
     <section id="projects" class="grid" aria-live="polite" aria-busy="true"></section>
 
