--- a/index.html
+++ b/index.html
@@ -100,7 +100,9 @@
         <h1 id="name" class="skeleton">i7protocol</h1>
         <p id="bio" class="skeleton">Cargando bio...</p>
         
-        <div style="margin-top:8px; display:flex; gap:8px; flex-wrap:wrap">$1</div>
+        <div style="margin-top:8px; display:flex; gap:8px; flex-wrap:wrap">
+          <span id="stats" class="pill skeleton">Repos • Seguidores • Siguiendo</span>
+        </div>
         
       </div>
       <div class="actions">
